Fix game link icons not centered on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -85,6 +85,7 @@ section.game {
 	.icons {
 		text-align: center;
 		font-size: 150%;
+		width: 100%;
 
 		a {
 			margin-left: 0.1rem;
